--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <title>我的三国</title>
     <script src="./svg/svg.js"></script>
+    <script src="./svg/map-base.js"></script>
     <script src="./svg/map.js"></script>
 </head>
 <body style="
 background: url(./back-map.jpg) no-repeat;
 background-position: 45px 0px;
 ">
-<svg id="my-svg" style="width: 1000px;height: 1000px;">
+<svg id="my-svg" style="width: 1200px;height: 1000px;">
 </svg>
     <script>
         var svgEle = document.getElementById('my-svg');
